# grafana-alert4ml-datasource

./: .env  .gitignore  CHANGELOG.md  LICENSE  Magefile.go  Makefile  README.md  buf.gen.yaml  buf.yaml  build.bat  cliff.toml  go.mod  go.sum  package-lock.json  package.json
.claude/: CLAUDE.md
.claude/skills/arrow-safe-ffi/: SKILL.md
.claude/skills/grafana-plugin-practices/: SKILL.md
.claude/skills/rust-algorithm-crate-layout/: SKILL.md
.claude/skills/rust-core/: SKILL.md
.claude/skills/rust-ml-boundary/: SKILL.md
.config/: Dockerfile  docker-compose-base.yaml
.config/supervisord/: supervisord.conf
.githooks/: commit-msg
.github/actions/go-builder/: action.yml
.github/actions/js-builder/: action.yml
.github/actions/rust-builder/: action.yml  rust.yml
.github/actions/target-mapper/: action.yml
.github/workflows/: release.yml  tag.yml
dataset/: main.py  pyproject.toml
dataset/testdata/: README.md
dataset/testdata/artificialNoAnomaly/: p24h_clean_art_daily_no_noise.csv  p24h_clean_art_daily_small_noise.csv
dataset/testdata/artificialWithAnomaly/: p24h_anom_art_daily_flatmiddle.csv  p24h_anom_art_daily_jumpsdown.csv  p24h_anom_art_daily_jumpsup.csv  p24h_anom_art_daily_nojump.csv  p24h_anom_art_increase_spike_density.csv  p24h_anom_art_load_balancer_spikes.csv
dataset/testdata/realAWSCloudwatch/: p24h_anom_curr_ec2_53ea38.csv  p24h_anom_curr_rds_cc0c53.csv  p24h_anom_curr_rds_e47b3b.csv  p24h_clean_hist_ec2_53ea38.csv  p24h_clean_hist_rds_cc0c53.csv  p24h_clean_hist_rds_e47b3b.csv  pnone_anom_curr_ec2_24ae8d.csv  pnone_anom_ec2_24ae8d.csv  pnone_clean_hist_ec2_24ae8d.csv
dataset/testdata/realAdExchange/: p24h7d_anom_curr_exchange2_cpc.csv  p24h7d_anom_curr_exchange2_cpm.csv  p24h7d_clean_hist_exchange2_cpc.csv  p24h7d_clean_hist_exchange2_cpm.csv
dataset/testdata/realKnownCause/: p24h7d_anom_curr_asg_cpu.csv  p24h7d_clean_hist_asg_cpu.csv  p7d_anom_curr_nyc_taxi.csv  p7d_clean_hist_nyc_taxi.csv
docs/interfaces/: README.md  go-rust-interface.md
docs/superpowers/plans/: 2026-04-22-rsod-outlier-refactor.md
docs/superpowers/specs/: 2026-04-22-rsod-outlier-refactor-design.md
pkg/: main.go
pkg/constant/: const.go
pkg/models/: settings.go
pkg/plugin/: converter.go  datasource.go  datasource_test.go  grpc.go  render_frame.go  storage.go  tools.go  tools_test.go  types.go
pkg/rsod/: Cargo.toml  Dockerfile  eval_test.go  musl_compat.c  rsod.go  rsod_test.go  rust-toolchain.toml
pkg/rsod/crates/rsod-baseline/: Cargo.toml
pkg/rsod/crates/rsod-baseline/src/: lib.rs
pkg/rsod/crates/rsod-outlier/src/: auto_mstl.rs  iqr.rs  seasons.rs  skew.rs
pkg/rsod/crates/rsod-storage/: Cargo.toml
pkg/rsod/crates/rsod-storage/src/: lib.rs
pkg/rsod/crates/rsod/src/: lib.rs
pkg/rsod/rsod/: service_grpc.pb.go
pkg/rsod/rsod-go/: build.rs  cbindgen.toml  go.mod  go.sum
pkg/rsod/rsod-go/include/: rsod_go.h
pkg/rsod/rsod-go/src/: lib.rs
pkg/sdk/: client.go
pkg/threshold/: iqr.go  threshold.go
proto/rsod/: service.proto
provisioning/datasources/: datasources.yml
rsod/: Cargo.toml  Cross.toml
rsod/crates/rsod/: Cargo.toml
rsod/crates/rsod-baseline/: Cargo.toml
rsod/crates/rsod-baseline/src/: dynamics.rs  lib.rs
rsod/crates/rsod-classifier/: Cargo.toml  DESIGN_CLASSIFIER.md  README.md
rsod/crates/rsod-classifier/src/: lib.rs  pipeline.rs  preprocessing.rs  seasonality.rs  stationarity.rs  traits.rs  trend.rs  types.rs
rsod/crates/rsod-core/: Cargo.toml
rsod/crates/rsod-core/src/: classify.rs  config.rs  decision.rs  error.rs  lib.rs  preprocessing.rs  traits.rs  types.rs
rsod/crates/rsod-ffi/: Cargo.toml  build.rs
rsod/crates/rsod-ffi/include/: rsod_go.h
rsod/crates/rsod-ffi/src/: lib.rs
rsod/crates/rsod-forecaster/: Cargo.toml  README.md
rsod/crates/rsod-forecaster/src/: lib.rs
rsod/crates/rsod-grpc/: Cargo.toml  build.rs
rsod/crates/rsod-grpc/src/: baseline.rs  forecast.rs  main.rs  outlier.rs  rsod.rs  utils.rs
rsod/crates/rsod-outlier/: .gitignore  Cargo.toml  READMD.md
rsod/crates/rsod-outlier/src/: auto_mstl.rs  evt.rs  ext_iforest.rs  iqr.rs  lib.rs  preprocessing.rs  seasons.rs  skew.rs  stl.rs
rsod/crates/rsod-storage/: Cargo.toml
rsod/crates/rsod-storage/src/: db.rs  lib.rs  model.rs
rsod/crates/rsod-utils/: Cargo.toml
rsod/crates/rsod-utils/src/: eval.rs  lib.rs
rsod/crates/rsod/src/: lib.rs
rsod/rsod-go/: Cargo.toml  go.mod  rsod.go  rsod_test.go
rsod/rsod-go/include/: rsod_go.h
rsod/rsod-go/src/: lib.rs
rsod/rsod-grpc/: Cargo.toml  build.rs
rsod/rsod-grpc/src/: main.rs
scripts/: copy_csv_data.sh  release-pre.sh
src/: README.md  datasource.ts  module.ts  plugin.json  types.ts
src/components/: Baseline.tsx  ConfigEditor.tsx  Dynamics.tsx  Forecast.tsx  LLM.tsx  QueryEditorv2.tsx  RsodHyperParams.tsx
tests/: configEditor.spec.ts
