[project]
name = "nab-importer"
version = "0.1.0"
description = "Import NAB dataset into Elasticsearch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
nab-import = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
