[workspace]
members = [
    "crates/*"
]
default-members = ["crates/rsod-grpc"]  # 设置默认运行入口为 rsod-grpc
resolver = "2"

[workspace.dependencies]
rsod-outlier = { path = "crates/rsod-outlier", version="0.1.1" }
rsod-forecaster = { path = "crates/rsod-forecaster", version="0.1.1" }
rsod-baseline = { path = "crates/rsod-baseline", version="0.1.1" }
rsod-utils = { path = "crates/rsod-utils", version="0.1.1" }
rsod-storage = { path = "crates/rsod-storage", version="0.1.1" }
rsod-grpc = { path = "crates/rsod-grpc", version="0.1.0" }

ndarray = "0.16.1"
rand = "0.8"
statrs = "0.18.0"
augurs = { version = "0.10.0", features = ["changepoint"] }
augurs-forecaster = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
approx = "0.5.1"
extended-isolation-forest = { version = "0.2.3", features = ["serde"] }
bincode = "1.3"
csv = "1.3.1"
rustfft = "6"
num-complex = "0.4"
chrono = "0.4"
stlrs = "0.3.1"
itertools = "0.14.0"
polars = { version = "0.51.0", features = ["lazy"] }
arrow = { version = "56.2.0", features = ["ffi"] }
polars-arrow = "0.51.0"
perpetual = "0.10.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
