[package]
name = "rsod-go"
version = "0.1.1"
edition = "2021"

[dependencies]
libc = "0.2.172"
rsod-outlier = { workspace = true }
rsod-forecaster = { workspace = true }
rsod-baseline = { workspace = true }
rsod-storage = { workspace = true }
rsod-utils = { workspace = true }
csv.workspace = true
chrono.workspace = true
arrow.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lib]
name = "rsod_go"
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.29.0"
