[package]
name = "rsod-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.14.2"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

rsod-outlier = { workspace = true }
rsod-forecaster = { workspace = true }
rsod-baseline = { workspace = true }
rsod-storage = { workspace = true }
rsod-utils = { workspace = true }
arrow.workspace = true
tokio-stream = "0.1.18"

[build-dependencies]
tonic-prost-build = "0.14.2"

[lints]
workspace = true
