[package]
name = "rsod-ffi"
version = "0.1.1"
edition = "2021"

[dependencies]
libc = "0.2.172"
rsod-core = { workspace = true }
rsod-outlier = { workspace = true }
rsod-forecaster = { workspace = true }
rsod-baseline = { workspace = true }
rsod-storage = { workspace = true }
rsod-utils = { workspace = true }
rsod-classifier = { workspace = true }
csv.workspace = true
chrono.workspace = true
arrow.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
name = "rsod_go"
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
cbindgen = "0.29.0"