[package]
name = "rsod"
version = "0.1.2"
edition = "2021"

[dependencies]
rsod-core = { workspace = true }
rsod-outlier = { workspace = true }
rsod-forecaster = { workspace = true }
rsod-baseline = { workspace = true }
rsod-storage = { workspace = true }
rsod-utils = { workspace = true }

[lints]
workspace = true